# courts-service-scraper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DATA_DICTIONARY.md  cli-design.md
src/courts_scraper/: __init__.py  cli.py  corpus.py  dataset.py  dates.py  db.py  download.py  export.py  http.py  models.py  naming.py  parse_list.py  parse_view.py  prompts.py  query.py  ratelimit.py  recovery.py  run.py  runs.py
src/courts_scraper/progress/: __init__.py  dashboard.py  events.py  format.py  model.py  plain.py  reporter.py  select.py
tests/: conftest.py  test_cli.py  test_corpus.py  test_corpus_archive.py  test_corpus_selection.py  test_dataset.py  test_dates.py  test_db.py  test_docs.py  test_download.py  test_export.py  test_naming.py  test_parse_list.py  test_parse_view.py  test_progress_engine_events.py  test_progress_model.py  test_progress_sinks.py  test_progress_waits.py  test_prompts.py  test_query.py  test_ratelimit.py  test_recovery.py  test_retry_skipped.py  test_run.py  test_runs.py  test_update.py
tests/fixtures/: search_page.html  view_no_citation.html  view_page.html
